--- a/dv/Makefile_model
+++ b/dv/Makefile_model
@@ -1,12 +1,36 @@
+# SPDX-License-Identifier: LGPL-2.1-or-later
+#
+# MCS6500 Compatible MicroComputer TestBench
+# Copyright 2022, Luke E. McKay.
+#
+# This library is free software; you can redistribute it and/or
+# modify it under the terms of the GNU Lesser General Public
+# License as published by the Free Software Foundation; either
+# version 2.1 of the License, or (at your option) any later version.
+#
+# This library is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# Lesser General Public License for more details.
+#
+# You should have received a copy of the GNU Lesser General Public
+# License along with this library; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301
+# USA
 
+#******************************************************************************
 default: all
 
-netlist_sim.o:
-	@echo
+all: netlist_sim.o perfect6502.o
+
+#******************************************************************************
+#*Targets
+
+netlist_sim.o: ../perfect6502/perfect6502.h
 	$(OBJCACHE) gcc  -I.  -MMD -I/usr/local/share/verilator/include -I/usr/local/share/verilator/include/vltstd -DVM_COVERAGE=1 -DVM_SC=0 -DVM_TRACE=1 -DVM_TRACE_FST=0 -fcf-protection=none -Wno-bool-operation -Wno-sign-compare -Wno-uninitialized -Wno-unused-but-set-variable -Wno-unused-parameter -Wno-unused-variable -Wno-shadow    -MMD -MP -DVL_DEBUG=1 -Os -fstrict-aliasing -c -o netlist_sim.o ../perfect6502/netlist_sim.c
 
-perfect6502.o:
-	@echo
+perfect6502.o: ../perfect6502/perfect6502.h
 	$(OBJCACHE) gcc  -I.  -MMD -I/usr/local/share/verilator/include -I/usr/local/share/verilator/include/vltstd -DVM_COVERAGE=1 -DVM_SC=0 -DVM_TRACE=1 -DVM_TRACE_FST=0 -fcf-protection=none -Wno-bool-operation -Wno-sign-compare -Wno-uninitialized -Wno-unused-but-set-variable -Wno-unused-parameter -Wno-unused-variable -Wno-shadow    -MMD -MP -DVL_DEBUG=1 -Os -fstrict-aliasing -c -o perfect6502.o ../perfect6502/perfect6502.c
 
-all: netlist_sim.o perfect6502.o
+../perfect6502/perfect6502.h:
+	git clone https://github.com/mist64/perfect6502.git ../perfect6502
